test/cases/extern_variable_has_no_type.1.zig
export fn entry() void {
    _ = foo;
}
extern var foo;

// error
//
// :4:8: error: unable to infer variable type
